name:                raytracer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/raytracer#readme
license:             AllRightsReserved
author:              Bryan Verble
maintainer:          bryan.verble@gmail.com
copyright:           2020 Bryan Verble
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable raytracer
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Tuple
                     , Canvas
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector

library
  hs-source-dirs:      src
  exposed-modules:     Tuple
                     , Canvas
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , transformers

test-suite test-raytracer
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , raytracer
                     , vector
  ghc-options:         -main-is Test
